mostrar fotos tomadas con la camara , desde BD

--- a/src/view/register.html
+++ b/src/view/register.html
@@ -46,7 +46,7 @@
       </div>
 
       
-      <canvas id="canvas" style="display: none;"></canvas>
+      <canvas id="canvas" style="display: none;" width="220" height="180"></canvas>
       <button id="takePicture">Tomar foto</button>
       <img id="img" >
       <div id="divImagenes"></div>
