avanzando css y responsive

--- a/src/view/assets/css/index.css
+++ b/src/view/assets/css/index.css
@@ -1,3 +1,16 @@
+header{
+    text-align: center;
+    font-size: 2em;   
+    margin-top: 1em; 
+}
+
+img{
+    width: 50%;
+    margin-top: 3em;
+    margin-bottom: 5em;
+    margin-left: 25%;
+}
+
 button{
     background: none;
     border:1px solid black;
