index según prototipo de alta fidelidad. Responsive

--- a/src/view/assets/css/index.css
+++ b/src/view/assets/css/index.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Questrial');
+
+*{
+    font-family: 'Questrial', sans-serif;
+}
+
 header{
     text-align: center;
-    font-size: 2em;   
+    font-size: 1.8em;   
     margin-top: 1em; 
 }
 
@@ -11,7 +17,93 @@ img{
     margin-left: 25%;
 }
 
-button{
+.indexButtons{
     background: none;
     border:1px solid black;
+    font-size: 1.5em;
+    width: 48%;
+    text-align: center;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+#checkoutButton{
+    float: left;
+}
+
+#checkinButton{
+    float: right;
+}
+
+.arrowIcons{
+    width: 0.6em;
+    margin: 0;
+}
+
+#registerButton{
+    background: none;
+    border: none;
+    font-size: 1.2em;
+    width: 60%;
+    margin-left: 20%;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    margin-bottom: 0.5em;
+}
+
+#userIcon{
+    width: 0.8em;
+    margin: 0;
+}
+
+.indexButtons:hover, focus {
+    background: #FBD100;
+    transition: 0.2s;
+}
+
+
+@media (min-width: 768px){
+      
+  header{
+    font-size: 3.7em;   
+  }
+    
+  img{
+    width: 35%;
+    margin-top: 7em;
+    margin-left: 32.5%;
+  }
+
+  .indexButtons{
+    margin-top: 1em;
+    font-size: 2.8em;
+    width: 40%;
+  }
+
+  #checkoutButton{
+    margin-left: 1em;
+  }
+
+  #checkinButton{
+    margin-right: 1em;
+  }
+
+  #registerButton{
+    font-size: 2.3em;
+  }
+    
+
+}
+
+
+@media (min-width: 1024px){
+
+  #registerButton{
+    position: inherit;
+    margin-top: 7em;
+  }
+
 }
