--- a/src/view/check-in.html
+++ b/src/view/check-in.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Registro de visitante</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/register.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/check-in.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/index.css" />
+  <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 </head>
 
 <body>
   <div id="registerContainer">
-    <header>Registro</header>
+    <header>Check-in</header>
 
     <form>
       <input type="text" placeholder="Nombre" id="name">
@@ -65,8 +66,8 @@
     </div>
   </div>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-  <script src="../model/register.js"></script>
-  <script src="../controller/register.js"></script>
+  <script src="../model/check-in.js"></script>
+  <script src="../controller/check-in.js"></script>
  
 </body>
 
