--- a/src/view/check-in.html
+++ b/src/view/check-in.html
@@ -30,17 +30,21 @@
         <input type="text"  id="identification">
       </div>
       <div id="msgErrorIdentification"></div>
+      <div class="inputContainer">
+        <label for="company">Empresa y/o asociación a la que pertenece</label>
+        <input type="text"  id="company">
+      </div>
     </form>
 
-    <div class="visited">
+   <!--  <div class="visited">
       <p>Empresa que visita</p>
       <select name="comunal offices" id="comunalOffices">
         <option value="comunal" selected>Comunal</option>
         <option value="laboratoria">Laboratoria</option>
       </select>
-    </div>
+    </div> -->
     
-    <div class="visited">
+  <!--   <div class="visited">
       <p>Persona a la que visita</p>
       <select name="employees" id="employees">
         <option value="Alejandra" selected>Alejandra</option>
@@ -48,7 +52,7 @@
         <option value="Gonzalo">Gonzalo</option>
         <option value="Ruth">Ruth</option>
       </select>
-    </div>
+    </div> -->
     <div class="buttonsContainer">
         <button class="checkInButtons" id="back"> <img class="arrowIcons" src="assets/img/back.png"> VOLVER </button>
         <button class="checkInButtons" id="next">SEGUIR <img class="arrowIcons" src="assets/img/right-arrow.png" alt="right icon"> </button>
