nueva estructura de datos para firebase

--- a/src/view/check-in.html
+++ b/src/view/check-in.html
@@ -76,7 +76,7 @@
         <img id="img">
       </div>
       
-     <!--  <div id="divImagenes"></div> -->
+      <div id="divImagenes"></div>
      
 
      <div class="buttonsContainer">
