--- a/src/view/assets/css/check-in.css
+++ b/src/view/assets/css/check-in.css
@@ -9,7 +9,7 @@ header{
   margin-bottom: 1.5em;
 }
 
-input, label, .visited{
+input, label{
   width: 80%;
   margin-left: 10%;
   font-size: 1em;
@@ -25,7 +25,7 @@ p{
   margin-top: 0;
 }
 
-.inputContainer, .visited{
+.inputContainer{
   margin-bottom: 1em;
 }
 
@@ -51,7 +51,7 @@ p{
   border: none;
 }
 
-.buttonsContainer{
+.buttonsContainer, #checkContainer{
   overflow: auto;
 }
 
@@ -96,7 +96,7 @@ h1{
   text-align: center;
 }
 
-#takePicture{
+#takePicture, #close{
   background: black;
   border: none;
   color: white;
@@ -128,6 +128,28 @@ h1{
   margin-right: 12.5%;
 }
 
+#confirmContainer{
+  display:none;
+}
+
+#confirmMessage{
+  font-size: 1.5em;
+  float: left;
+  margin-left: 2em;
+  margin-top: 1.5em;
+}
+
+#check{
+width: 15%;
+margin-left: 20% !important;
+float: left;
+}
+
+#checkContainer{
+  margin-top: 30%;
+  margin-bottom: 30%;
+}
+
 
 @media (min-width: 768px){
 
@@ -136,13 +158,13 @@ h1{
     margin-top:2em !important;
   }
 
-  input, label, .visited{
+  input, label{
     width: 60%;
     margin-left: 20%;
     font-size: 1.2em;
   }
 
-  .inputContainer, .visited{
+  .inputContainer{
     margin-bottom: 1.5em;
   }
 
@@ -173,7 +195,7 @@ h1{
   
 @media (min-width: 1024px){
 
-  input, label, .visited{
+  input, label{
     width: 40%;
     margin-left: 30%;
   }
