--- a/src/view/check-in.html
+++ b/src/view/check-in.html
@@ -21,11 +21,6 @@
       </div>
       <div id="msgErrorName"></div>
       <div class="inputContainer">
-        <label for="lastName">Apellidos</label>
-        <input type="text" id="lastName">
-      </div>
-      <div id="msgErrorLastName"></div>
-      <div class="inputContainer">
         <label for="identification">DNI</label>
         <input type="text"  id="identification">
       </div>
@@ -36,43 +31,23 @@
       </div>
     </form>
 
-   <!--  <div class="visited">
-      <p>Empresa que visita</p>
-      <select name="comunal offices" id="comunalOffices">
-        <option value="comunal" selected>Comunal</option>
-        <option value="laboratoria">Laboratoria</option>
-      </select>
-    </div> -->
-    
-  <!--   <div class="visited">
-      <p>Persona a la que visita</p>
-      <select name="employees" id="employees">
-        <option value="Alejandra" selected>Alejandra</option>
-        <option value="Bea">Bea</option>
-        <option value="Gonzalo">Gonzalo</option>
-        <option value="Ruth">Ruth</option>
-      </select>
-    </div> -->
     <div class="buttonsContainer">
-        <button class="checkInButtons" id="back"> <img class="arrowIcons" src="assets/img/back.png"> VOLVER </button>
-        <button class="checkInButtons" id="next">SEGUIR <img class="arrowIcons" src="assets/img/right-arrow.png" alt="right icon"> </button>
+      <button class="checkInButtons" id="back"> <img class="arrowIcons" src="assets/img/back.png"> VOLVER </button>
+      <button class="checkInButtons" id="next">SEGUIR <img class="arrowIcons" src="assets/img/right-arrow.png" alt="right icon"> </button>
     </div>
     
   </div>
  
   <div id="logoContainer">
-      <img src="assets/img/comunal-logo.png" alt="logo comunal">
+    <img src="assets/img/comunal-logo.png" alt="logo comunal">
   </div>
 
   <div id="photoRegisterContainer">
     <h1>¡Sonrie!</h1>
     <div id="cameraContainer">
       <video id="video" ></video>  
-          
-
       <canvas id="canvas" style="display: none;" width="250" height="250"></canvas>
       <button id="takePicture">Tomar foto</button>
-      
     </div>
 
     <div id="photoContainer">
@@ -80,15 +55,22 @@
         <img id="img">
       </div>
       
-     <!--  <div id="divImagenes"></div> -->
-     
-
-     <div class="buttonsContainer">
+      <div class="buttonsContainer">
         <button class="checkInButtons" id="anotherPic"> <img class="arrowIcons" src="assets/img/back.png"> VOLVER </button>
         <button class="checkInButtons" id="nextStep">SEGUIR <img class="arrowIcons" src="assets/img/right-arrow.png" alt="right icon"> </button>
-    </div>
+      </div>
     </div>
   </div>
+
+  <div id="confirmContainer">
+    <h1>Te esperamos en recepción</h1>
+    <div id="checkContainer">
+      <img src="assets/img/check.png" alt="check notification" id="check">
+      <p id="confirmMessage">Gracias por registrarte</p>
+    </div>
+    <button id="close">Cerrar</button>
+  </div>
+
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
   <script src="../model/functions-validations.js"></script>
   <script src="../model/check-in.js"></script>
