--- a/src/view/visited.html
+++ b/src/view/visited.html
@@ -57,6 +57,7 @@
     </div> 
   </div>
   <section id="containerVisits"></section>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
     <script src="../model/firebase.js"></script>
     <script src="../model/visited.js"></script>
