registro de salida implementado

--- a/src/view/check-out.html
+++ b/src/view/check-out.html
@@ -34,8 +34,10 @@
     <img src="assets/img/comunal-logo.png" alt="logo comunal">
   </div>
   
-    
 
+  <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+  <script src="../model/firebase.js"></script>
   <script src="../controller/check-out.js"></script>
+  <script src="../model/check-out.js"></script>
 </body>
 </html>
