funcion enviar correo

--- a/src/view/check-in.html
+++ b/src/view/check-in.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="registerContainer">
-    <header>Ingrese sus datos</header>
+    <header>Ingresar datos del visitante</header>
 
     <form>
       <div class="inputContainer">
@@ -30,24 +30,6 @@
         <input type="text"  id="company">
       </div>
     </form>
-
-   <!--  <div class="visited">
-      <p>Empresa que visita</p>
-      <select name="comunal offices" id="comunalOffices">
-        <option value="comunal" selected>Comunal</option>
-        <option value="laboratoria">Laboratoria</option>
-      </select>
-    </div> -->
-    
-  <!--   <div class="visited">
-      <p>Persona a la que visita</p>
-      <select name="employees" id="employees">
-        <option value="Alejandra" selected>Alejandra</option>
-        <option value="Bea">Bea</option>
-        <option value="Gonzalo">Gonzalo</option>
-        <option value="Ruth">Ruth</option>
-      </select>
-    </div> -->
     <div class="buttonsContainer">
         <button class="checkInButtons" id="back"> <img class="arrowIcons" src="assets/img/back.png"> VOLVER </button>
         <button class="checkInButtons" id="next">SEGUIR <img class="arrowIcons" src="assets/img/right-arrow.png" alt="right icon"> </button>
