--- a/src/view/visited.html
+++ b/src/view/visited.html
@@ -46,10 +46,10 @@
         <div class="visited">
           <p>ANFITRIÓN</p>
           <select name="employees" id="employees">
-            <option value="Alejandra" selected>Alejandra</option>
-            <option value="Bea">Bea</option>
-            <option value="Gonzalo">Gonzalo</option>
-            <option value="Ruth">Ruth</option>
+            <option value="yulissa teran" selected>Alejandra</option>
+            <option value="yulissa teran">Bea</option>
+            <option value="yulissa teran">Gonzalo</option>
+            <option value="yulissa teran">Ruth</option>
           </select>
         </div>
         <button id="saveVisit">GUARDAR</button>
