--- a/src/view/assets/css/index.css
+++ b/src/view/assets/css/index.css
@@ -73,25 +73,40 @@ img{
   }
     
   img{
-    width: 35%;
-    margin-top: 7em;
+    width: 25%;
+    margin-top: 3em;
     margin-left: 32.5%;
   }
 
   .indexButtons{
-    margin-top: 1em;
-    font-size: 2em;
-    width: 40%;
+    margin-top: 9%;
+    margin-bottom: 70%;
+    font-size: 1em;
+    width: 20%;
+    height: 25px;
   }
 
 
   #checkoutButton{
     font-size: 2.3em;
+    
+
+    background: none;
+    border: none;
+    font-size: 1.2em;
+    width: 30%;
+    margin-left: 20%;
+    /* position: fixed; */
+    right: 0;
+    bottom: 0;
+    left: 0;
+    /* z-index: 1; */
+    margin-bottom: 0.5em;
+
   }
     
 
 }
-
 
 @media (min-width: 1024px){
 
