--- a/src/view/check-out.html
+++ b/src/view/check-out.html
@@ -36,6 +36,7 @@
   
 
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+  <script src="../model/functions-validations.js"></script>
   <script src="../model/firebase.js"></script>
   <script src="../controller/check-out.js"></script>
   <script src="../model/check-out.js"></script>
