--- a/src/view/visited.html
+++ b/src/view/visited.html
@@ -55,9 +55,12 @@
       </div>
     </div> 
   </div>
-  <section id="containerVisits"></section>
+  <section id="containerVisits">
+    <!-- <div class="divVisit"></div> -->
+  </section>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+  <script src="../model/functions-validations.js"></script>
     <script src="../model/firebase.js"></script>
     <script src="../model/visited.js"></script>
     <script src="../controller/visited.js"></script>
