--- a/src/view/visited.html
+++ b/src/view/visited.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>REGISTRO DE VISITANTES</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="assets/css/visited.css" />
+  <!-- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/visited.css" /> -->
     
 </head>
 <body>
