--- a/src/view/assets/css/style.css
+++ b/src/view/assets/css/style.css
@@ -15,11 +15,11 @@
   background-color: #FFC107;
  }
  .bg-main-img {
-   background-image: url("http://www.forbesargentina.com/wp-content/uploads/2018/05/WeWork-Vicente-Lopez-3.jpg");
+   /* background-image: url("http://www.forbesargentina.com/wp-content/uploads/2018/05/WeWork-Vicente-Lopez-3.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
-   min-height: 96.5vh;
+   min-height: 96.5vh; */
    
   }  
   .width-all {
